Fix subscribing so that it works correctly.
And edit customers existing card without destroying the customer

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -138,7 +138,7 @@
         .pricing-panel.panel.panel-default.text-center
           .panel-heading.pricing-name Professional Account
           .panel-body
-            .pricing-dollars $35
+            .pricing-dollars ${{ctrl.settings.subscription.price}}
             div.price-subtext per month
             hr.divider
             div Advance up to level 8
