--- a/app/subscribe_checkout/payment/template.jade
+++ b/app/subscribe_checkout/payment/template.jade
@@ -57,6 +57,8 @@
 
         .panel-footer.panel-footer-white
           .clearfix
-            button.btn.btn-primary.pull-right(type='submit') Save & Continue
+            button.btn.btn-primary.pull-right(
+              type='submit'
+            ) Save & Continue
 
 
