--- a/app/pieces_by_level/template.jade
+++ b/app/pieces_by_level/template.jade
@@ -4,10 +4,10 @@
       .pull-left(ng-if='ctrl.currentLevel > 1')
         a(href='' ng-click='ctrl.goToPreviousLevel()')
           span.fa.fa-angle-double-left
-          span &nbsp;Previous
+          span &nbsp;Previous Level
       .pull-right(ng-if='ctrl.currentLevel < ctrl.user.level')
         a(href='' ng-click='ctrl.goToNextLevel()')
-          span Next&nbsp;
+          span Next Level&nbsp;
           span.fa.fa-angle-double-right
   .clearfix
     h4.pull-left.user-level {{ctrl.levelHelper.getLevelName(ctrl.currentLevel)}} Pieces
@@ -28,7 +28,7 @@
         .panel.panel-primary.pricing-panel
           .panel-heading.pricing-name Professional Account
           .panel-body
-            .pricing-dollars $35
+            .pricing-dollars ${{ctrl.settings.subscription.price}}
             .price-subtext per month
             .pricing-description You cannot access these pieces with a free account. Upgrade to a professional account to advance up to level 8, the highest level.
             a.btn.btn-primary.btn-block(href='' ui-sref='subscribeCheckout.payment') upgrade now
