--- a/app/subscribe_checkout/payment/template.jade
+++ b/app/subscribe_checkout/payment/template.jade
@@ -1,6 +1,6 @@
 .subscribe-checkout-payment
-  .row(ng-if='ctrl.gettingCard').text-center.payment-loader
-    i.fa.fa-refresh.fa-spin.fa-3x.loader
+  .row(ng-if='ctrl.gettingCard').text-center
+    i.fa.fa-refresh.fa-spin.fa-4x.loader.full-page-loader
   .row(ng-if='!ctrl.gettingCard')
     .col-md-6.col-md-offset-3
       form.panel.panel-default(
