Don't show lesson tab for now

--- a/app/lessons/style.styl
+++ b/app/lessons/style.styl
@@ -20,6 +20,13 @@
   .cards-accepted
     margin-bottom 10px
 
+  .divider
+    margin-top 10px
+    margin-bottom 10px
+
+  .photo-col
+    margin-right 0px
+
   .guitarist-photo
     // display inline-block
     width 100%
