--- a/app/subscribe_checkout/template.jade
+++ b/app/subscribe_checkout/template.jade
@@ -5,7 +5,7 @@
     .steps
       span.step(ng-class='{"current-step": ctrl.stateIncludes("subscribeCheckout.signUp")}')
         i.fa.fa-lock
-        span   Sign up
+        span   Log in
       span.step(ng-class='{"current-step": ctrl.stateIncludes("subscribeCheckout.payment")}')
         i.fa.fa-credit-card
         span   Payment
