--- a/app/lessons/template.jade
+++ b/app/lessons/template.jade
@@ -3,12 +3,19 @@
     .col-sm-10.col-sm-offset-1
       .panel.panel-default.clearfix
         .row
-          .col-sm-4
+          .col-sm-4.photo-col
             img.guitarist-photo(src='/danny_nelson.jpg')
           .col-sm-8.guitarist-description
             .panel-body
               h4
                 span Danny Nelson
-                .pull-right.text-warning $60/hour
-              p Hi, my name is Danny Nelson, and I am the founder of GuitarQuest. Gluten-free hammock DIY mlkshk bitters. Cornhole polaroid viral, microdosing waistcoat pitchfork wayfarers stumptown cronut keytar normcore.
-              a.btn.btn-primary(href='' ui-sref='lessonCheckout') Buy a Private Lesson
+                .pull-right.text-warning $55/hour
+              hr.divider
+              div Founder of GuitarQuest
+              hr.divider
+              div Studied at USC and Northwestern with Pepe Romero, Bill Kanengiser, Oscar Ghiglia, and Anne Waller.
+              hr.divider
+              div Over 10 years of experience teaching and performing.
+              hr.divider
+
+              a.btn.btn-primary.buy-lesson-btn(href='' ui-sref='lessonCheckout') Buy a Private Lesson
