Fix bugs with level 0 pieces

--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -44,7 +44,7 @@
             .submission-successful.text-center(ng-show='ctrl.userPiece.submissionVideoURL')
               video.video-preview(controls)
 
-        gq-piece-history(ng-if='ctrl.userPiece && ctrl.piece.level' user-piece='ctrl.userPiece' level='ctrl.piece.level')
+        gq-piece-history(user-piece='ctrl.userPiece' level='ctrl.piece.level')
 
       .col-md-4
         .panel.panel-default.buy-sheet-music-panel
