Fix a couple bugs and clean up tests

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -88,22 +88,22 @@
             .col-xs-10
               .section-subtitle Private lessons
               .description-text Buy a private video lesson to get personalized feedback from a GuitarQuest teacher.
-        .resource
-          .row.resource
-            .col-xs-2.text-right
-              i.fa.fa-check.fa-2x.text-success
-            .col-xs-10
-              .section-subtitle Tutorials
-              .description-text Access video tutorials and articles about classical guitar fundamentals.
+        //- .resource
+        //-   .row.resource
+        //-     .col-xs-2.text-right
+        //-       i.fa.fa-check.fa-2x.text-success
+        //-     .col-xs-10
+        //-       .section-subtitle Tutorials
+        //-       .description-text Access video tutorials and articles about classical guitar fundamentals.
 
       .col-md-6.resources
-        .resource
-          .row.resource
-            .col-xs-2.text-right
-              i.fa.fa-check.fa-2x.text-success
-            .col-xs-10
-              .section-subtitle Recordings
-              .description-text Listen to recordings of the pieces that you are learning.
+        //- .resource
+        //-   .row.resource
+        //-     .col-xs-2.text-right
+        //-       i.fa.fa-check.fa-2x.text-success
+        //-     .col-xs-10
+        //-       .section-subtitle Recordings
+        //-       .description-text Listen to recordings of the pieces that you are learning.
 
         .row.resource
           .col-xs-2.text-right
@@ -124,26 +124,26 @@
       h3.section-title.text-center Start with a free account, upgrade when you advance
       .col-sm-4.text-center
         .pricing-panel.panel.panel-default.text-center
-          .panel-heading.pricing-name Amateur Account
+          .panel-heading.pricing-name Basic Account
           .panel-body
             .pricing-dollars Free
             hr.divider
             div Advance up to preparatory level
             hr.divider
-            div Get teacher feedback for video uploads
+            div Receive teacher feedback for video uploads
             hr.divider
             div Complete challenges
 
       .col-sm-4
         .pricing-panel.panel.panel-default.text-center
-          .panel-heading.pricing-name Professional Account
+          .panel-heading.pricing-name Premium Account
           .panel-body
             .pricing-dollars ${{ctrl.settings.subscription.price}}
             div.price-subtext per month
             hr.divider
             div Advance up to level 8
             hr.divider
-            div Get teacher feedback for video uploads
+            div Receive teacher feedback for video uploads
             hr.divider
             div Complete challenges
 
@@ -151,7 +151,7 @@
         .pricing-panel.panel.panel-default.text-center
           .panel-heading.pricing-name Private Lessons
           .panel-body
-            .pricing-dollars $60
+            .pricing-dollars $30 - $60
             div.price-subtext per lesson
             hr.divider
             div Pay per lesson
