--- a/app/subscribe_checkout/review/template.jade
+++ b/app/subscribe_checkout/review/template.jade
@@ -13,7 +13,7 @@
           .panel-title Order Summary
         .panel-body
           .clearfix
-            .pull-left <strong>Professional Account (Renews Monthly)</strong>
+            .pull-left <strong>Premium Account (Renews Monthly)</strong>
             .pull-right <strong>${{ctrl.settings.subscription.price}}</strong>
           hr.order-divider
           .clearfix
