--- a/app/pieces_by_level/template.jade
+++ b/app/pieces_by_level/template.jade
@@ -26,11 +26,11 @@
     .row(ng-if='!ctrl.userCanLearnPieces')
       .col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4
         .panel.panel-primary.pricing-panel
-          .panel-heading.pricing-name Professional Account
+          .panel-heading.pricing-name Upgrade to Premium
           .panel-body
             .pricing-dollars ${{ctrl.settings.subscription.price}}
             .price-subtext per month
-            .pricing-description You cannot access these pieces with a free account. Upgrade to a professional account to advance up to level 8, the highest level.
+            .pricing-description You cannot access these pieces with a free account. Upgrade to a premium account to advance up to level 8, the highest level.
             a.btn.btn-primary.btn-block(href='' ui-sref='subscribeCheckout.payment') upgrade now
 
     .row(ng-if='ctrl.userCanLearnPieces')
