Update navbar icons

--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -56,16 +56,16 @@
 
             p You can then resubmit another video at any time.
 
-        .panel.panel-default.listen-to-the-recording(ng-if='ctrl.getSpotifySrc()')
-          .panel-body
-            p <strong>LISTEN TO THE RECORDING</strong>
-            iframe(
-              ng-src="{{ctrl.getSpotifySrc()}}"
-              width="100%"
-              height="80"
-              frameborder="0"
-              allowtransparency="true"
-            )
+        //- .panel.panel-default.listen-to-the-recording(ng-if='ctrl.getSpotifySrc()')
+        //-   .panel-body
+        //-     p <strong>LISTEN TO THE RECORDING</strong>
+        //-     iframe(
+        //-       ng-src="{{ctrl.getSpotifySrc()}}"
+        //-       width="100%"
+        //-       height="80"
+        //-       frameborder="0"
+        //-       allowtransparency="true"
+        //-     )
 
         //- .panel.panel-default
         //-   .panel-body
