--- a/local_modules/directives/gq_navbar/style.styl
+++ b/local_modules/directives/gq_navbar/style.styl
@@ -37,3 +37,13 @@
     right: 7px;
     top: 20px;
     font-weight: bold;
+  .user-icon
+    display inline-block
+  .user-profile-info
+    display inline-block
+  .user-profile-placeholder
+    font-size: 19px;
+    margin-right: 4px;
+    position: relative;
+    bottom: 9px;
+    color: #D0D0D0
