--- a/web/layout.jade
+++ b/web/layout.jade
@@ -4,7 +4,7 @@ html(
   ng-app='app'
 )
   head
-    title(ng-bind="pageTitle()")
+    title Guitar Quest
 
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
