--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -9,6 +9,7 @@
 
   .video-preview
     width 100%
+    margin-bottom -8px
 
   .link-panel
     height 100px
@@ -82,3 +83,9 @@
       color #7F7F7F
     li:before
       color #7F7F7F
+
+  .uploading-percent
+    margin-bottom 20px
+
+  .cancel-upload
+    font-size 15px
