--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -19,7 +19,8 @@
   -o-background-size: cover
   background-repeat: no-repeat
   height 640px
-  width: 100%
+  min-width: 100%
+  height 100vh
   // background-position: center top
 
 .guitar-background-full
