Add more defenses around registering

--- a/app/confirm_email/template.jade
+++ b/app/confirm_email/template.jade
@@ -1,7 +1,7 @@
-.guitar-quest-confirm_email
+.guitar-quest-confirm-email
   .row.content(ng-if='!ctrl.isLoading')
     .col-md-6.col-md-offset-3
-      .panel.panel-default
+      .panel.panel-default.confirm-email-panel
         .panel-body
           h5 Confirm Your Email Address
           p Thanks for signing up for GuitarQuest! We just sent a confirmation email to your registration email address. Click on the confirmation link in that email to complete your sign up.
