Host large images on S3

--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -6,7 +6,7 @@
     margin-bottom -23px
     // background-position: 0% 25%
     // background: url("/guitar_4.jpg")
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/guitar_4.jpg")
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("https://s3-us-west-2.amazonaws.com/guitar-quest-assets/guitar-landing.jpg")
     background-size: cover
     -webkit-background-size: cover;
     -moz-background-size: cover;
