--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -11,7 +11,7 @@
   margin-top -23px
   margin-bottom -23px
   // background-position: 0% 25%
-  background: url("/guitar_5.jpg")
+  background: url("https://s3-us-west-2.amazonaws.com/guitar-quest-assets/guitar-white.jpg")
   background-position: center center
   background-size: cover
   -webkit-background-size: cover;
