--- a/web/layout.jade
+++ b/web/layout.jade
@@ -15,7 +15,7 @@ html(
 
     link(rel='stylesheet' href=assets('/bootstrap.min.css'))
     link(rel='stylesheet' href=assets('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'))
-    link(rel='stylesheet' href=assets('/app.css'))
+    link(rel='stylesheet' href=assets('http://127.0.0.1:8076/app.css'))
     link(rel='icon' href=assets('/images/favicon.ico'))
 
     //- embed shared Settings in app.
@@ -28,4 +28,4 @@ html(
     script(type="text/javascript" src="https://js.stripe.com/v2/")
     script.
       Stripe.setPublishableKey(settings.stripe.publishableKey)
-    script(src=assets('/app.js'))
+    script(src=assets('http://127.0.0.1:8076/app.js'))
