--- a/react/routes/App/routes/SignUp/components/SignUpForm/styles.css
+++ b/react/routes/App/routes/SignUp/components/SignUpForm/styles.css
@@ -2,6 +2,10 @@
   padding: 20px;
 }
 
+.panel .form-group {
+  margin-bottom: 0px;
+}
+
 .title {
   text-align: center;
   font-size: 28px;
@@ -13,5 +17,6 @@
   margin-top: 30px;
   margin-bottom: 10px;
 }
+
 
 
