Add support for password reset

--- a/app/account/template.jade
+++ b/app/account/template.jade
@@ -3,7 +3,7 @@
     .col-md-6.col-md-offset-3
       .panel.panel-default
         .panel-body
-          h4.title Account
+          h4.panel-title Account
           .row
             .col-xs-12
               .row
@@ -21,7 +21,7 @@
                     .edit-input
                       input.form-control.edit-input(
                         ng-model='ctrl.form.firstName'
-                        placeholder='John Smith'
+                        placeholder='John'
                       )
                     button.btn.btn-primary.btn-sm.btn-confirm-change(type='submit')
                       i.fa.fa-check
@@ -45,7 +45,7 @@
                     .edit-input
                       input.form-control.edit-input(
                         ng-model='ctrl.form.lastName'
-                        placeholder='John Smith'
+                        placeholder='Smith'
                       )
                     button.btn.btn-primary.btn-sm.btn-confirm-change(type='submit')
                       i.fa.fa-check
