--- a/app/account/style.styl
+++ b/app/account/style.styl
@@ -1,4 +1,6 @@
 .guitar-quest-account
+  font-size 14px
+
   .info-divider
     margin-top 10px
     margin-bottom 10px
@@ -13,3 +15,6 @@
 
   .btn-confirm-change
     margin-right 5px
+
+  .panel-body
+    padding 20px
