Fix piece history on review piece page

--- a/app/account_change_password/template.jade
+++ b/app/account_change_password/template.jade
@@ -3,7 +3,7 @@
     .col-md-6.col-md-offset-3
       .panel.panel-default
         .panel-body
-          h4.panel-title Change Password
+          h4.panel-title-lg Change Password
           div(ng-if='ctrl.isPasswordChanged')
             .change-success You successfully changed your password.
             button.submit.btn.btn-primary(ui-sref='guitarQuest.account') Return to Account
