--- a/app/manage_pieces/template.jade
+++ b/app/manage_pieces/template.jade
@@ -11,4 +11,4 @@
         .panel-body
           h5 {{piece.name}}
           p {{piece.composer}}
-          .btn.btn-default(ng-click='ctrl.editPiece(piece)') Edit
+          a.btn.btn-primary(ng-click='ctrl.editPiece(piece)') Edit
