--- a/app/review_submitted_piece/template.jade
+++ b/app/review_submitted_piece/template.jade
@@ -13,7 +13,7 @@
     .panel.panel-default.piece-panel
       video.video-preview(controls)
 
-    gq-piece-history(ng-if='ctrl.userPiece && ctrl.piece.level' user-piece='ctrl.userPiece' level='ctrl.piece.level')
+    gq-piece-history(user-piece='ctrl.userPiece' level='ctrl.piece.level')
 
   .col-md-4
     .panel.panel-default
