--- a/app/sign_up/template.jade
+++ b/app/sign_up/template.jade
@@ -5,7 +5,7 @@
         .col-sm-6.col-sm-offset-3.col-lg-4.col-lg-offset-4
           .create-account-panel.panel.panel-default
             .panel-body.padded-panel
-              h4.text-center.panel-title Sign up for free
+              h4.text-center.panel-title-lg Sign up for free
               uib-alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
               form(
                 novalidate
