--- a/app/account/template.jade
+++ b/app/account/template.jade
@@ -3,7 +3,7 @@
     .col-md-6.col-md-offset-3
       .panel.panel-default
         .panel-body
-          h4.panel-title Account
+          h4.panel-title-lg Account
           .row
             .col-xs-12
               .row
