--- a/app/log_in/template.jade
+++ b/app/log_in/template.jade
@@ -5,7 +5,7 @@
         .col-sm-6.col-sm-offset-3.col-lg-4.col-lg-offset-4
           .login-panel.panel.panel-default
             .panel-body.padded-panel
-              h4.text-center.panel-title Log in to your account
+              h4.text-center.panel-title-lg Log in to your account
               uib-alert(type='danger' ng-if='ctrl.error' close='ctrl.error = null') {{ctrl.error}}
               form(
                 novalidate
